app/assets/stylesheets/base.css.scss
body {
  background-color: #fff;
  color: #333;
  font-size: 13px;
  font-family: 'Press Start 2P', cursive;
  line-height: 18px;
}

p, ol, ul, td {
  font-size: 13px;
  line-height: 18px;
}

pre {
  background-color: #eee;
  padding: 10px;
  font-size: 11px;
  font-family: 'Press Start 2P', cursive;
}

a {
  display: inline-block;
  color: #000;
  &:visited {
    color: #666;
  }
  &:hover {
    color: #fff;
    background-color: magenta;
  }
}

div {
  &.field, &.actions {
    margin-bottom: 10px;
  }
}

.flash {
  margin: 20px 0;
  color: green;
  font-size: 16px;
  font-family: 'Press Start 2P', cursive;
  text-align: center;
}

.field_with_errors {
  padding: 2px;
  background-color: red;
  display: table;
}

#error_explanation {
  width: 450px;
  border: 2px solid red;
  padding: 7px;
  padding-bottom: 0;
  margin-bottom: 20px;
  background-color: #f0f0f0;
  h2 {
    text-align: left;
    font-weight: bold;
    padding: 5px 5px 5px 15px;
    font-size: 12px;
    margin: -7px;
    margin-bottom: 0px;
    background-color: #c00;
    color: #fff;
  }
  ul li {
    font-size: 12px;
    list-style: none;
  }
}

.clear {
  clear: both;
  height: 1px;
}

h1,
h2,
h3 {
  font-family: 'Press Start 2P', cursive;
  margin-top: 10px;
  margin-bottom: 10px;
  line-height: 30px;
}

/* LAYOUT */

.wrapper {
  width: 1040px;
  margin: auto;
  background-color: #00eeee;

  .header {
    height: 180px;
    margin-bottom: 10px;
    background: cyan;

    .logo {
      vertical-align: middle;
      float: left;
    }

    .by {
      float: left;
      font-size: 8px;
      line-height: 10px;
      padding: 60px 40px 0 40px;
    }

    .imf {
      float: left;
      font-size: 20px;
      padding-top: 65px;
      line-height: 25px;
      font-style: italic;
      text-align: center;
    }

    .nav {
      float: right;
      margin-right: 40px;
      padding-top: 80px;

      .points-counter {
        text-align: right;
        font-size: 16px;
        padding-top: 10px;
      }
    }

  }


  .content-wrapper {
    padding: 20px;
  }
}

.footer {
  padding-top: 30px;
  text-align: center;
  a {
    color: gray;
    font-size: 8px;
    text-decoration: none;
  }
}

/* END LAYOUT */

.challenge-larger-display {
  .image-one {
    float: left;
    margin-right: 20px;
  }

  .image-two {
    float: right;
  }
}

.challenge-large-display {
  .clue {
    clear: both;
    padding-top: 30px;
    margin-bottom: 30px;
  }

  .image-one {
    float: left;
    margin-right: 20px;
  }

  .image-two {
    float: right;
  }
}

.home-page {

  .teaser-text {
    font-family: 'Press Start 2P', cursive;
    text-align: center;
    font-size: 28px;
    font-weight: bold;
    margin-top: 50px;
    clear: both;
  }

  form {
    padding-top: 20px;
    display: block;
    width: 350px;
    margin: auto;
    text-align: center;

    .field {
      margin-top: 10px;
    }

    input {
      text-align: center;
    }
  }


}

.teaser-challenges {
  margin-top: 40px;
  text-align: center;

  .challenge {
    display: inline-block;
    border: 2px solid orange;
    margin-right: 47px;
  }

  .challenge:last-child {
    margin-right: 0;
  }

  .image-one {
    float: left;
  }

  .image-two {
    float: left;
  }
}

.hint-string {
  letter-spacing: 5px;
  font-size: 28px;
  margin-top: 50px;
  margin-bottom: 50px;
  text-align: center;
}

.challenge-list {
  padding-left: 340px;

  .challenge {
    clear: both;
    padding-bottom: 30px;
    float: left;

    .image-one {
      float: left;
    }

    .image-two {
      float: left;
    }
  }
}

input {
  font-size: 18px !important;
}

.response-page {
  .answer-field {
    text-align: center;
  }

  .buttons {
    text-align: center;
    margin-top: 20px
  }

  .challenge-banner {
    text-align: center;
    margin-bottom: 40px;
    padding-bottom: 10px;
  }

}

.correct-response-page {
  .answer {
    font-size: 20px;
    line-height: 26px
  }

  .challenge {
    border: 2px solid orange;
    width: 450px;
    height: 200px;
    float: left;
  }

  .options {
    width: 260px;
    height: 110px;
    font-size: 40px;

    img {
      vertical-align: middle;
    }

    float: left;
    padding-left: 140px;

    .add-your-own {
      margin-top: 40px;
    }
  }

  .send-to-friend-form {
    display: none;
    border: 2px dotted magenta;
    clear: both;
    margin-top: 20px;
    padding: 10px;
    width: 320px;
    height: 110px;

    input[type=email] {
      width: 200px;
    }

    input {
      float: left;
    }
  }

}

div.google-checkout-wrapper {
  padding-top: 20px;
  text-align: center;
}

.new-challenge-page {
  .instructions {
    font-size: 14px;
  }

  .chosen-images {
    padding-top: 50px;
    padding-left: 400px;
    margin-bottom: 40px;

    .image-one,
    .image-two {
      float: left;
      text-align: center;
      height: 80px;
      width: 80px;
      border: 2px dotted orange;
      margin-right: 20px;
    }
  }

  .image-selection-box {

    width: 100%;
    height: 300px;
    overflow-y: scroll;

    .image-wrapper {
      width: 90px;
      height: 90px;
      text-align: center;
      float: left;
    }
  }
}

